# ml-pipeline

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/mlpipe/: __init__.py
src/mlpipe/base/: __init__.py  trainer.py  transformer.py
src/mlpipe/core/: __init__.py  config.py  loader.py  registry.py
src/mlpipe/pipelines/: data_finaliser.py  feature_engineer.py  trainer.py
tests/: conftest.py  test_feature_engineer.py  test_registry.py
