[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Registry-based YAML-configurable ML pipeline infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "joblib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlpipe"]
