[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Registry-based YAML-configurable ML pipeline infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "joblib>=1.4.2",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlpipe"]

[tool.hatch.build.targets.wheel.force-include]
"src/mlpipe/py.typed" = "mlpipe/py.typed"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]
